gcc/testsuite/rust/rustc/ui/extenv/extenv-no-args.rs
fn main() { env!(); } // { dg-error "" "" { target *-*-* } }

